# anki

./: README.md  pyproject.toml
.claude/: CLAUDE.md  python-standards.md  workflow.md
src/anki_agent/: config.py  images.py  ipa.py
src/anki_agent/agents/: cli.py
src/anki_agent/audio/: __init__.py
src/anki_agent/notes/templates/: cloze_back.html  cloze_front.html  grammar_front.html  source_to_target_back.html  source_to_target_front.html  target_to_source_back.html  target_to_source_front.html
src/anki_agent/notes/templates/css/: styles.css
tests/: test_languages.py
tests/agents/: test_cli.py
tests/notes/: test_templates.py
